fixing swagger bugs
